--- a/contact/styleCo.css
+++ b/contact/styleCo.css
@@ -15,10 +15,10 @@ body {
 }
 
 /* --------------------------------------HEADER CODE-------------------------------------------- */
+/* Postion sticky to keep header at top of page always */
 header {
   justify-content: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
-  /* Postion sticky to keep header at top of page always */
+  box-shadow: 0 4px 8px #00000061;
   position: sticky;
   top: 0;
 }
@@ -54,13 +54,14 @@ nav h1 a {
   list-style: none;
 }
 
+/* display: inline;
+  list-style: none; add this ^^ to desktop query
+  Display none takes away links for hamburger menu*/
 #links {
-  /* display: inline;
-  list-style: none; add this ^^ to desktop query*/
-  /* Display none takes away links for hamburger menu*/
   display: none;
   font-size: 125%;
   margin: 0, 20%;
+
   /* Border to make links pop */
   border-top: solid #3f2218 1px;
   border-bottom: solid #3f2218 1px;
@@ -69,6 +70,7 @@ nav h1 a {
 nav ul li a {
   color: wheat;
   text-decoration: none;
+
   /* transition time to smoothen out new color on hover transition */
   transition: all 0.3s ease-in-out;
   padding: 0 5%;
@@ -83,7 +85,7 @@ nav ul li a:hover {
 .contact-header {
   background-color: #e79e85;
   color: #3f2218;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+  box-shadow: 0 4px 8px #00000061;
   font-size: 150%;
   font-weight: normal;
   margin-bottom: 5%;
@@ -95,7 +97,7 @@ nav ul li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: solid rgba(128, 128, 128, 0.403) 2px;
+  border-bottom: solid #80808066 2px;
 }
 
 /* Layout Set Up of Form CSS Code. */
@@ -118,6 +120,7 @@ input {
   border-radius: 15px;
   background-color: #fffff0;
   width: 65%;
+
   /* need to update default font in input */
   font-family: Optima, sans-serif;
   text-align: center;
@@ -150,7 +153,7 @@ textarea {
   border: 2px solid #cd4439;
 }
 
-/* ------------------------------------MISSION Code----------------------------------- */
+/* ------------------------------------MISSION CODE----------------------------------- */
 section.mission {
   text-align: center;
   width: 100%;
@@ -158,7 +161,7 @@ section.mission {
   background-image: url("../photos/warpockets.webp");
   background-size: cover;
   background-position: center;
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
 }
 
 .mission h2 {
@@ -176,7 +179,7 @@ section.mission {
 .newsletter-header {
   background-color: #e79e85;
   color: #3f2218;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+  box-shadow: 0 4px 8px #00000061;
   font-size: 150%;
   font-weight: normal;
   margin-bottom: 5%;
@@ -193,7 +196,8 @@ section.mission {
 /* ------------------------------------Footer Code----------------------------------- */
 footer {
   background-color: #007065;
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
+
   /* Set up grid template to place different footer info in different places */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -215,8 +219,8 @@ footer {
   left: 0;
 }
 
+/* Tried to make % but wouldn't inline when in % */
 .socialbutton {
-  /* Tried to make % but wouldn't inline when in % */
   height: 20px;
   width: 20px;
 }
@@ -228,7 +232,7 @@ footer {
 
 .footer-section a {
   text-decoration: none;
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
   font-size: 25%;
 }
 
@@ -302,7 +306,6 @@ footer {
   }
 
   /* Layout Set Up of Form CSS Code. */
-
   label {
     font-size: 80%;
   }
@@ -338,7 +341,6 @@ footer {
   }
 
   /* -------------NEWSLETTER CODE------------- */
-
   .newsletter-header {
     font-size: 180%;
     margin-bottom: 2%;
@@ -368,8 +370,8 @@ footer {
     font-size: 50%;
   }
 
+  /* Could not get % to display right */
   .footer-section li {
-    /* Could not get % to display right */
     height: 30px;
   }
 }
