--- a/home/styleH.css
+++ b/home/styleH.css
@@ -14,15 +14,16 @@ body {
 /* --------------------------------------HEADER CODE-------------------------------------------- */
 header {
   justify-content: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+  box-shadow: 0 4px 8px #00000061;
 }
 
 /* --------------------------------------NAVBAR CODE-------------------------------------------- */
+/* Postion sticky to keep header at top of page always */
+/* zindex keeps nav bar on top of .hero background image */
+
 nav {
-  /* zindex keeps nav bar on top of .hero background image */
   z-index: 2;
   background-color: #557669;
-  /* Postion sticky to keep header at top of page always */
   position: sticky;
   top: 0;
   text-align: center;
@@ -50,21 +51,21 @@ nav h1 a {
   list-style: none;
 }
 
+/* display: inline;
+  Display none takes away links unless clicked in JS
+  /* Border top and bottom to make extened links pop */
 #links {
-  /* display: inline;
-  /* Display none takes away links unless clicked in JS */
   display: none;
   font-size: 125%;
   margin: 0, 20%;
-  /* Border top and bottom to make extened links pop */
   border-top: solid #3f2218 2px;
   border-bottom: solid #3f2218 2px;
 }
 
+/* transition time to smoothen out new color on hover transition */
 nav ul li a {
   color: wheat;
   text-decoration: none;
-  /* transition time to smoothen out new color on hover transition */
   transition: all 0.3s ease-in-out;
   padding: 0 5%;
 }
@@ -74,14 +75,14 @@ nav ul li a:hover {
 }
 
 /* --------------------------------------HERO CODE-------------------------------------------- */
+/* Could not get height to work with % */
 .hero {
   z-index: 0;
-  color: rgb(245, 222, 179);
+  color: #f3e6ce;
   background-image: url("../photos/heroimage.jpeg");
   opacity: 0.75;
   background-size: cover;
   background-position: center;
-  /* Could not get height to work with % */
   height: 500px;
   display: flex;
   flex-direction: column;
@@ -95,15 +96,16 @@ nav ul li a:hover {
   margin-top: 0;
   text-shadow: 10px;
   font-size: 250%;
-  text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.808);
+  text-shadow: 3px 3px 0 #000000ce;
 }
 
 .hero p {
   font-size: 110%;
   margin: 28% 10%;
-  text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.808);
+  text-shadow: 2px 2px 0 #000000ce;
 }
 
+/* To transition hover */
 .hero-btn {
   background-color: #cd4439;
   color: #f2f2f2;
@@ -112,9 +114,8 @@ nav ul li a:hover {
   text-decoration: none;
   padding: 1% 3%;
   border-radius: 50px;
-  /* To transition hover */
   transition: all 0.3s ease-in-out;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.808);
+  box-shadow: 0 5px 5px #000000ce;
 }
 
 .hero-btn:hover {
@@ -141,6 +142,8 @@ nav ul li a:hover {
   margin: auto;
 }
 
+/* color is arrow */
+/* background color is */
 .prev,
 .next {
   cursor: pointer;
@@ -149,9 +152,8 @@ nav ul li a:hover {
   width: auto;
   margin-top: -20%;
   padding: 3%;
-  /* color is arrow */
   color: #f2f2f2;
-  /* background color is */
+
   background-color: #55766979;
   font-weight: bold;
   font-size: 100%;
@@ -245,7 +247,7 @@ nav ul li a:hover {
   padding: 1% 3%;
   border-radius: 50px;
   transition: all 0.3s ease-in-out;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.808);
+  box-shadow: 0 3px 3px #000000ce;
 }
 
 .btn:hover {
@@ -255,7 +257,7 @@ nav ul li a:hover {
 }
 
 #section1 {
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
   background-image: url("../photos/shophome.webp");
   background-size: cover;
   background-position: center;
@@ -272,7 +274,7 @@ nav ul li a:hover {
 }
 
 #section1 h4 {
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
 }
 
 #section2 {
@@ -280,11 +282,11 @@ nav ul li a:hover {
 }
 
 #section3 h4 {
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
 }
 
 #section3 {
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
   align-items: center;
   background-image: url("../photos/warpockets.webp");
   background-size: cover;
@@ -293,10 +295,10 @@ nav ul li a:hover {
 }
 
 /* ------------------------------------Footer Code----------------------------------- */
+/* Set up grid template to place different footer info in different places */
 footer {
   background-color: #007065;
-  color: rgb(243, 230, 206);
-  /* Set up grid template to place different footer info in different places */
+  color: #f3e6ce;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto auto auto;
@@ -317,8 +319,8 @@ footer {
   left: 0;
 }
 
+/* Tried to make % but wouldn't inline when in % */
 .socialbutton {
-  /* Tried to make % but wouldn't inline when in % */
   height: 20px;
   width: 20px;
 }
@@ -330,7 +332,7 @@ footer {
 
 .footer-section a {
   text-decoration: none;
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
   font-size: 25%;
 }
 
@@ -402,7 +404,7 @@ footer {
 
   .hero h2 {
     font-size: 300%;
-    text-shadow: 3px 3px 0 rgba(0, 0, 0, 0.808);
+    text-shadow: 3px 3px 0 #000000ce;
   }
 
   .hero p {
@@ -507,9 +509,9 @@ footer {
     line-height: 1.1;
   }
 
+  /* Display inline so in desktop the nav links will show automatically */
   nav ul li {
     font-size: 120%;
-    /* Display inline so in desktop the nav links will show automatically */
     display: inline;
   }
 
@@ -524,7 +526,6 @@ footer {
   }
 
   /* ---------------HERO QUERY CODE--------------- */
-
   .hero {
     height: 90vh;
   }
@@ -545,7 +546,6 @@ footer {
   }
 
   /* --------------CAROUSEL QUERY CODE--------------- */
-
   .featured h4 {
     font-size: 200%;
     margin: 1% 0%;
