--- a/product/styleP.css
+++ b/product/styleP.css
@@ -19,7 +19,7 @@ header {
   position: sticky;
   top: 0;
   justify-content: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+  box-shadow: 0 4px 8px #00000061;
 }
 
 /* --------------------------------------NAVBAR CODE-------------------------------------------- */
@@ -57,11 +57,11 @@ nav h1 a {
   list-style: none;
 }
 
-#links {
-  /* display: inline;
+/* display: inline;
   list-style: none; 
   add this ^^ to desktop query*/
-  /* Display none takes away links */
+/* Display none takes away links */
+#links {
   display: none;
   font-size: 125%;
   margin: 0, 20%;
@@ -86,7 +86,7 @@ nav ul li a:hover {
   background-color: #e79e85;
   padding: 4% 0 0.2%;
   color: #3f2218;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.387);
+  box-shadow: 0 4px 8px #00000061;
 }
 
 h2 {
@@ -109,11 +109,11 @@ h3 {
 
 #styles-subsection p {
   font-size: 10px;
-  padding: 0px 10px 10px;
+  padding: 0 10px 10px;
 }
 
 #styles-subsection {
-  padding: 0px 8px;
+  padding: 0 8px;
   display: none;
   text-align: left;
 }
@@ -159,7 +159,7 @@ h3 {
   height: 81%;
   opacity: 0;
   transition: opacity 0.3s ease;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #00000080;
 }
 
 .product:hover .overlay {
@@ -171,7 +171,7 @@ h3 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
   font-size: 1em;
   text-align: center;
   width: 100%;
@@ -188,18 +188,18 @@ h3 {
   background-color: #e79e85;
   border: none;
   color: black;
-  padding: 5px 0px;
+  padding: 5px 0;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  margin: 0px 50px;
+  margin: 0 50px;
   cursor: pointer;
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
 }
 
 .order-button:hover {
-  background-color: rgb(243, 230, 206);
+  background-color: #f3e6ce;
   color: #cd4439;
   border: 2px solid #cd4439;
 }
@@ -216,7 +216,7 @@ order-button:active {
 /* ------------------------------------Footer Code----------------------------------- */
 footer {
   background-color: #007065;
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto auto auto;
@@ -249,7 +249,7 @@ footer {
 
 .footer-section a {
   text-decoration: none;
-  color: rgb(243, 230, 206);
+  color: #f3e6ce;
   font-size: 25%;
 }
 
@@ -331,11 +331,11 @@ footer {
 
   #styles-subsection p {
     font-size: 15px;
-    padding: 0px 15px 10px;
+    padding: 0 15px 10px;
   }
 
   #styles-subsection {
-    padding: 0px 40px;
+    padding: 0 40px;
     text-align: center;
   }
 
@@ -396,10 +396,10 @@ footer {
     font-size: 15px;
     padding: 0 250px 10px;
   }
-  /* -------------FOOTER QUERY CODE------------ */
 
+  /* -------------FOOTER QUERY CODE------------ */
   .social-icons li {
-    padding: 10px 67px 0px;
+    padding: 10px 67px 0;
     margin: 0;
   }
 
